[project]
name = "relive-dm"
version = "0.1.0"
description = "Datamining utilities for Revue Starlight Re LIVE"
authors = [
    {name = "qwewqa", email = "198e559dbd446d973355f415bdfa34@gmail.com"},
]
dependencies = [
    "httpx>=0.25.1",
    "pydantic>=2.5.1",
    "cryptography>=41.0.5",
    "msgpack>=1.0.7",
    "typer[all]>=0.9.0",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[project.scripts]
relive-dm = "relive_dm.main:app"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.dev-dependencies]
lint = [
    "black>=23.11.0",
    "isort>=5.12.0",
]

[tool.isort]
profile = "black"
