[project]
name = "relive-dm"
version = "0.1.0"
description = "Datamining utilities for Revue Starlight Re LIVE"
authors = [
    {name = "qwewqa", email = "198e559dbd446d973355f415bdfa34@gmail.com"},
]
dependencies = [
    "httpx>=0.25.1",
    "pydantic>=2.5.1",
    "cryptography>=41.0.5",
    "msgpack>=1.0.7",
    "typer[all]>=0.9.0",
    "pyyaml>=6.0.2",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[project.scripts]
relive-dm = "relive_dm.main:app"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.dev-dependencies]
dev = [
    "pre-commit>=3.5.0",
]
lint = [
    "ruff>=0.1.6",
    "pyright>=1.1.336",
]

[tool.ruff]
target-version = "py310"

[tool.pyright]
venvPath = "."
venv = ".venv"
